Updated responses of entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,10 @@ spring.application.name=repuestos-gaston-backend
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=false
+#spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
+#spring.batch.jdbc.initialize-schema=always
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/dbrepuestosgaston
