--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=true
 #spring.jpa.defer-datasource-initialization=false
 #spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.batch.jdbc.initialize-schema=always
 
 spring.datasource.driver-class-name=org.postgresql.Driver
